--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -45,35 +45,43 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">20 June 2020</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                     </tr>
-
                 {% endif %}
+
+                {% if data.hideone == 'true' %}
+                {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&newcaseselected=false&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&newcaseselected=false&casetohide=a&">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">AY-34137102</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Yang</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">24 Jan 2020</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                     </tr>
+                {% endif %}
 
+                {% if data.hidetwo == 'true' %}
+                {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&newcaseselected=false&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&newcaseselected=false&casetohide=b&">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">EW-6671238</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Williams</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> 1 May 2020</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">1 May 2020</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
                     </tr>
+                {% endif %}
 
+                {% if data.hidethree == 'true' %}
+                {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&newcaseselected=false&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&newcaseselected=false&casetohide=c&">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">NJ-7982475</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Norman</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jones</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020 </td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
                     </tr>
-
+                {% endif %}
 
 
                 </tbody>
@@ -204,76 +212,87 @@ Case details
             </tbody>
         </table>
         {% else %}
+            <!--  DIVORCE -->
             <p>Displaying 1 - 3 out of 3 results</p>
             <table class="govuk-table ">
-    <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Case reference</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Case created date</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 70px; padding-right: 30px;">Pet. First name</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 70px; padding-right: 30px;">Pet. Last name</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Resp. First name</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Resp. Last name</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 50px; padding-right: 30px;">Due Date</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Divorce Unit</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Last Modified</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 50px; padding-right: 30px;">Linked Cases</th>
-    </tr>
-    </thead>
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Case reference</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Case created date</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 70px; padding-right: 30px;">Pet. First name</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 70px; padding-right: 30px;">Pet. Last name</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Resp. First name</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Resp. Last name</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 50px; padding-right: 30px;">Due Date</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Divorce Unit</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 100px; padding-right: 30px;">Last Modified</th>
+                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-17" style="width: 50px; padding-right: 30px;">Linked Cases</th>
+                </tr>
+                </thead>
 
-    <tbody class="govuk-table__body">
-    {% if data.caseadded == 'true' %}
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?&newcaseselected=true&divorcename=Narran vs Beth&">{{ data.casenumber }}</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Apr 2020, 9:50:28 AM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Martin</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Narran</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Beth</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">King</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
-    </tr>
-    {% endif %}
+                <tbody class="govuk-table__body">
+                {% if data.caseadded == 'true' %}
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?&newcaseselected=true&divorcename=Narran vs Beth&">{{ data.casenumber }}</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Apr 2020, 9:50:28 AM</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Martin</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Narran</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Beth</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">King</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
+                </tr>
+                {% endif %}
 
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&newcaseselected=false&divorcename=Smith vs Blythe&">3689-2642-5857-7069</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Feb 2020, 9:50:28 AM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">James</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Smith</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jane</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Blythe</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">24 Jun 2020, 3:47:26 PM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
-    </tr>
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&newcaseselected=false&divorcename=Hoyle vs King&">1593-0136-4696-9976</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020, 1:48:33 PM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Mary</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Hoyle</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Daniel</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">King</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 April 2020, 9:50:28 AM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
-    </tr>
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&newcaseselected=false&divorcename=Higham vs Higham&">3827-2010-3565-3933</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">2 Dec 2019, 4:23:50 PM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Sarah</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">26 April 2019, 3:09:18 PM</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
-    </tr>
+                {% if data.hideone == 'true' %}
+                {% else %}
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Feb 2020, 9:50:28 AM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">James</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Smith</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jane</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Blythe</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">24 Jun 2020, 3:47:26 PM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
+                    </tr>
+                {% endif %}
 
+                {% if data.hidetwo == 'true' %}
+                {% else %}
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020, 1:48:33 PM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Mary</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Hoyle</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Daniel</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">King</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 April 2020, 9:50:28 AM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
+                    </tr>
+                {% endif %}
+
+                {% if data.hidethree == 'true' %}
+                {% else %}
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">2 Dec 2019, 4:23:50 PM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Sarah</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Courts and Tribunals Service Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">26 April 2019, 3:09:18 PM</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
+                    </tr>
+                {% endif %}
 
     </tbody>
 </table>
@@ -288,23 +307,23 @@ Case details
 <form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
     <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
-        <option value="caselist=divorce&caseadded=false&"
+        <option value="caselist=divorce&caseadded=false&hideone=false&hidetwo=false&hidethree=false&"
                 {% if data.caselist == 'divorce' %}selected{% endif %}
         >Divorce</option>
 
-        <option value="caselist=financialremedy&caseadded=false&"
+        <option value="caselist=financialremedy&caseadded=false&hideone=false&hidetwo=false&hidethree=false&"
                 {% if data.caselist == 'financialremedy' %}selected{% endif %}
         >Financial remedy</option>
 
-        <option value="caselist=probate&caseadded=false&"
+        <option value="caselist=probate&caseadded=false&hideone=false&hidetwo=false&hidethree=false&"
                 {% if data.caselist == 'probate' %}selected{% endif %}
         >Probate</option>
 
-        <option value="caselist=publiclaw&caseadded=false&"
+        <option value="caselist=publiclaw&caseadded=false&hideone=false&hidetwo=false&hidethree=false&"
                 {% if data.caselist == 'publiclaw' %}selected{% endif %}
         >Family public Law</option>
 
-        <option value="caselist=immigration&caseadded=false&"
+        <option value="caselist=immigration&caseadded=false&hideone=false&hidetwo=false&hidethree=false&"
                 {% if data.caselist == 'immigration' %}selected{% endif %}
         >Immigration and asylum</option>
 
